# kairox-password-vault

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
crates/kairox-api/: Cargo.toml
crates/kairox-api/migrations/: 0001_initial.sql
crates/kairox-api/src/: error.rs  jwt.rs  lib.rs  main.rs  router.rs
crates/kairox-api/src/entity/: collection.rs  entry.rs  mod.rs  user.rs  wrapped_key.rs
crates/kairox-api/src/handlers/: auth.rs  collections.rs  entries.rs  mod.rs  users.rs
crates/kairox-api/src/migration/: m20240101_initial.rs  m20240102_add_user_salt.rs  mod.rs
crates/kairox-crypto/: Cargo.toml
crates/kairox-crypto/src/: aead.rs  collection_key.rs  error.rs  kdf.rs  keywrap.rs  lib.rs  wasm.rs
crates/kairox-crypto/tests/: integration.rs
crates/kairox-types/: Cargo.toml
crates/kairox-types/src/: encrypted.rs  entry.rs  error.rs  lib.rs
extension/: manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/scripts/: copy-wasm.cjs  generate-icons.cjs
extension/src/background/: index.ts  session.ts  vault-client.ts
extension/src/content/: autofill.ts  form-detector.ts  index.ts  overlay.ts
extension/src/popup/: App.tsx  index.html
extension/src/popup/components/: EntryList.tsx  SearchBar.tsx  StatusBar.tsx
extension/src/popup/hooks/: useBackground.ts
extension/src/popup/pages/: UnlockPage.tsx  VaultPage.tsx
extension/src/shared/: messages.ts  origin.ts  storage.ts
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: api.ts  client.ts  index.ts  session.ts  types.ts  utils.ts  wasm.d.ts  worker.ts
web/: .env.development  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  tray.rs
web/src/components/: EntryCard.tsx  EntryModal.tsx  Layout.tsx  PasswordInput.tsx  Spinner.tsx
web/src/context/: VaultContext.tsx
web/src/pages/: CollectionPage.tsx  LoginPage.tsx  RegisterPage.tsx  VaultPage.tsx
web/src/tauri/: client.ts
