[package]
name = "kairox-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "kairox_api"
path = "src/lib.rs"

[[bin]]
name = "kairox-api"
path = "src/main.rs"

[dependencies]
kairox-types = { path = "../kairox-types" }

axum          = { version = "0.7", features = ["json", "macros"] }
tokio         = { version = "1",   features = ["full"] }
tower-http    = { version = "0.5", features = ["trace", "cors"] }

# ORM — wraps sqlx-postgres internally; no direct sqlx dependency needed
sea-orm           = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
sea-orm-migration = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

uuid          = { version = "1",   features = ["v4", "serde"] }
serde         = { version = "1",   features = ["derive"] }
serde_json    = "1"
jsonwebtoken  = "9"
argon2        = { version = "0.5", features = ["std"] }
base64        = "0.22"
chrono        = { version = "0.4", features = ["serde"] }
thiserror     = "1"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy       = "0.15"
anyhow        = "1"
async-trait   = "0.1"
