[package]
name = "kairox-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
base64            = "0.22"

# Native crypto — no WASM overhead
kairox-crypto     = { path = "../../crates/kairox-crypto" }
kairox-types      = { path = "../../crates/kairox-types" }

# key material stays in Rust
x25519-dalek      = { version = "2", features = ["static_secrets"] }
zeroize           = { version = "1", features = ["derive"] }
rand              = { version = "0.8", features = ["getrandom"] }
